redesigned project. now all tasks is in one project. added console interface. full worked task 1 and 2

--- a/task16/task16.csproj
+++ b/task16/task16.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\education_library\EducationLibrary\EducationLibrary.csproj" />
+    <ProjectReference Include="..\EducationLibrary\EducationLibrary.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
