--- a/CSharpSem/CSharpSem.csproj
+++ b/CSharpSem/CSharpSem.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\EducationLibrary\EducationLibrary.csproj" />
+    <ProjectReference Include="..\EducationLibraries\EducationLibraries.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
